# tc-media-playback

./: Makefile.am  configure.ac
include/: DBusMsgDef.h  MediaPlaybackDBus.h  MultiMediaManager.h  TCMultiMediaType.h  TCTime.h
src/: DBusMsgDefNames.c  Makefile.am  MediaPlaybackDBus.c  MultiMediaManager.c  TCTime.c  main.c
